--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "morgan": "~1.3.0",
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
-    "jade": "~1.6.0"
+    "jade": "~1.6.0",
+    "url": "0.10.3"
   },
   "main": "app.js",
   "devDependencies": {},
